--- a/css/main.css
+++ b/css/main.css
@@ -83,3 +83,39 @@ td {
     margin: 0 1rem 0 0;
     text-align: left;
 }
+/* Mobile first queries */
+
+/* Larger than mobile */
+@media (min-width: 400px) {
+    #footer-logo {
+        margin-top: -2.8rem;
+    }
+}
+
+/* Larger than phablet */
+@media (min-width: 550px) {
+    #footer-logo {
+        margin-top: -0.8rem;
+    }
+}
+
+/* Larger than tablet */
+@media (min-width: 750px) {
+    #footer-logo {
+        margin-top: -0.8rem;
+    }
+}
+
+/* Larger than desktop */
+@media (min-width: 1000px) {
+    #footer-logo {
+        margin-top: -0.8rem;
+    }
+}
+
+/* Larger than Desktop HD */
+@media (min-width: 1200px) {
+    #footer-logo {
+        margin-top: -0.8rem;
+    }
+}
