--- a/css/main.css
+++ b/css/main.css
@@ -89,6 +89,7 @@ td {
 @media (min-width: 400px) {
     #footer-logo {
         margin-top: -2.8rem;
+        font-size: 1.8rem;
     }
 }
 
@@ -96,6 +97,7 @@ td {
 @media (min-width: 550px) {
     #footer-logo {
         margin-top: -0.8rem;
+        font-size: 2rem;
     }
 }
 
@@ -103,6 +105,7 @@ td {
 @media (min-width: 750px) {
     #footer-logo {
         margin-top: -0.8rem;
+        font-size: 2rem;
     }
 }
 
@@ -110,6 +113,7 @@ td {
 @media (min-width: 1000px) {
     #footer-logo {
         margin-top: -0.8rem;
+        font-size: 2rem;
     }
 }
 
@@ -117,5 +121,6 @@ td {
 @media (min-width: 1200px) {
     #footer-logo {
         margin-top: -0.8rem;
+        font-size: 2rem;
     }
 }
